book_contents/_build/html/reports/fake_praw.log
Traceback (most recent call last):
  File "C:\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Python310\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Python310\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Python310\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Python310\lib\asyncio\base_events.py", line 646, in run_until_complete
    return future.result()
  File "C:\Python310\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Python310\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Python310\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def hot(limit=10):
    submission_list = [
        SimpleNamespace(
            id = "904tjwdf093j",
            title = "Look at my cute dog!", 
            author = SimpleNamespace(
                name="fake_user"
            ),
            edited = False,
            created_utc = 1673327625,
            score = 23,
            upvote_ratio = .93,
            num_comments = 7,
            selftext = ""
            url = "example.com/fake_image.jpg"
            )
    ]
    return iter(submission_list)
------------------

[1;36m  Input [1;32mIn [10][1;36m[0m
[1;33m    selftext = ""[0m
[1;37m               ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax. Perhaps you forgot a comma?

SyntaxError: invalid syntax. Perhaps you forgot a comma? (810681263.py, line 14)

